// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Episodes changes the order when clicking the sort button 1`] = `
<DocumentFragment>
  .c3 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(255,255,255,0.12);
  border-bottom-width: thin;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c8 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c5::-moz-focus-inner {
  border-style: none;
}

.c5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c9 {
  font-family: Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
}

.c9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41,45,51,0.08);
}

.c9.Mui-disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  gap: 16px;
}

.c10 {
  width: 100%;
  text-align: left;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 * {
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 16px;
}

@media print {
  .c5 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c9:hover {
    background-color: transparent;
  }
}

<div
    class="c0 c1"
  >
    <div
      class="c2"
      style="width: 100%; justify-content: flex-end; align-items: center;"
    >
      <hr
        class="c3 MuiDivider-root MuiDivider-fullWidth c4"
      />
      <div
        aria-label="Ordenar descendentemente"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="c5 makeStyles-wrapper-20 MuiButtonBase-root"
          data-testid="episodes-sort-button"
          tabindex="0"
          type="button"
        >
          <div
            class="makeStyles-common-17 makeStyles-secondary-19"
          >
            <svg
              aria-hidden="true"
              class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c7"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(0.25);"
                x1="0"
                x2="24"
                y1="4"
                y2="4"
              />
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(0.5);"
                x1="0"
                x2="24"
                y1="12"
                y2="12"
              />
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(1);"
                x1="0"
                x2="24"
                y1="20"
                y2="20"
              />
            </svg>
          </div>
          <div
            class="makeStyles-common-17 makeStyles-root-18"
          >
            Ordenar
          </div>
          <span
            class="c8 MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 1 - 10
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Episodes renders default with different groupSize=1 1`] = `
<DocumentFragment>
  .c3 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(255,255,255,0.12);
  border-bottom-width: thin;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c8 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c5::-moz-focus-inner {
  border-style: none;
}

.c5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c9 {
  font-family: Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
}

.c9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41,45,51,0.08);
}

.c9.Mui-disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  gap: 16px;
}

.c10 {
  width: 100%;
  text-align: left;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 * {
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 16px;
}

@media print {
  .c5 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c9:hover {
    background-color: transparent;
  }
}

<div
    class="c0 c1"
  >
    <div
      class="c2"
      style="width: 100%; justify-content: flex-end; align-items: center;"
    >
      <hr
        class="c3 MuiDivider-root MuiDivider-fullWidth c4"
      />
      <div
        aria-label="Ordenar ascendentemente"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="c5 makeStyles-wrapper-4 MuiButtonBase-root"
          data-testid="episodes-sort-button"
          tabindex="0"
          type="button"
        >
          <div
            class="makeStyles-common-1 makeStyles-secondary-3"
          >
            <svg
              aria-hidden="true"
              class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c7"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(1);"
                x1="0"
                x2="24"
                y1="4"
                y2="4"
              />
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(0.5);"
                x1="0"
                x2="24"
                y1="12"
                y2="12"
              />
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(0.25);"
                x1="0"
                x2="24"
                y1="20"
                y2="20"
              />
            </svg>
          </div>
          <div
            class="makeStyles-common-1 makeStyles-root-2"
          >
            Ordenar
          </div>
          <span
            class="c8 MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 10 - 10
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 9 - 9
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 8 - 8
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 7 - 7
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 6 - 6
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 5 - 5
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 4 - 4
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 3 - 3
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 2 - 2
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 1 - 1
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Episodes renders default with different groupSize=5 1`] = `
<DocumentFragment>
  .c3 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(255,255,255,0.12);
  border-bottom-width: thin;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c8 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c5::-moz-focus-inner {
  border-style: none;
}

.c5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c9 {
  font-family: Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
}

.c9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41,45,51,0.08);
}

.c9.Mui-disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  gap: 16px;
}

.c10 {
  width: 100%;
  text-align: left;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 * {
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 16px;
}

@media print {
  .c5 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c9:hover {
    background-color: transparent;
  }
}

<div
    class="c0 c1"
  >
    <div
      class="c2"
      style="width: 100%; justify-content: flex-end; align-items: center;"
    >
      <hr
        class="c3 MuiDivider-root MuiDivider-fullWidth c4"
      />
      <div
        aria-label="Ordenar ascendentemente"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="c5 makeStyles-wrapper-8 MuiButtonBase-root"
          data-testid="episodes-sort-button"
          tabindex="0"
          type="button"
        >
          <div
            class="makeStyles-common-5 makeStyles-secondary-7"
          >
            <svg
              aria-hidden="true"
              class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c7"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(1);"
                x1="0"
                x2="24"
                y1="4"
                y2="4"
              />
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(0.5);"
                x1="0"
                x2="24"
                y1="12"
                y2="12"
              />
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(0.25);"
                x1="0"
                x2="24"
                y1="20"
                y2="20"
              />
            </svg>
          </div>
          <div
            class="makeStyles-common-5 makeStyles-root-6"
          >
            Ordenar
          </div>
          <span
            class="c8 MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 6 - 10
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
    <button
      class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
      tabindex="0"
      type="button"
    >
      Episodios 1 - 5
      <span
        class="c8 MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Episodes renders default with different groupSize=20 1`] = `
<DocumentFragment>
  .c3 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(255,255,255,0.12);
  border-bottom-width: thin;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c8 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c5::-moz-focus-inner {
  border-style: none;
}

.c5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c9 {
  font-family: Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
}

.c9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41,45,51,0.08);
}

.c9.Mui-disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 {
  gap: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  gap: 16px;
}

.c10 {
  width: 100%;
  text-align: left;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 * {
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 16px;
}

@media print {
  .c5 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c9:hover {
    background-color: transparent;
  }
}

<div
    class="c0 c1"
  >
    <div
      class="c2"
      style="width: 100%; justify-content: flex-end; align-items: center;"
    >
      <hr
        class="c3 MuiDivider-root MuiDivider-fullWidth c4"
      />
      <div
        aria-label="Ordenar ascendentemente"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="c5 makeStyles-wrapper-12 MuiButtonBase-root"
          data-testid="episodes-sort-button"
          tabindex="0"
          type="button"
        >
          <div
            class="makeStyles-common-9 makeStyles-secondary-11"
          >
            <svg
              aria-hidden="true"
              class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c7"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(1);"
                x1="0"
                x2="24"
                y1="4"
                y2="4"
              />
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(0.5);"
                x1="0"
                x2="24"
                y1="12"
                y2="12"
              />
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(0.25);"
                x1="0"
                x2="24"
                y1="20"
                y2="20"
              />
            </svg>
          </div>
          <div
            class="makeStyles-common-9 makeStyles-root-10"
          >
            Ordenar
          </div>
          <span
            class="c8 MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 10
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 9
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 8
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 7
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 6
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 5
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 4
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 3
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 2
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 1
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Episodes renders default with different groupSize=30 1`] = `
<DocumentFragment>
  .c3 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(255,255,255,0.12);
  border-bottom-width: thin;
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  font-size: 1.5rem;
  font-size: inherit;
}

.c8 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-transform: unset;
}

.c5::-moz-focus-inner {
  border-style: none;
}

.c5.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

.c9 {
  font-family: Quicksand,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #292d33;
  color: #e9ebf0;
  background-color: #292d33;
  margin-bottom: 0;
  font-weight: normal;
  text-align: center;
  vertical-align: middle;
  outline: 0 !important;
  white-space: nowrap;
  border: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 14px;
  line-height: 1.42857143;
  text-transform: unset;
  border-radius: 6px;
  height: 36px;
  color: #e9ebf0;
  text-transform: none;
  padding: 8px 12px;
}

.c9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(41,45,51,0.08);
}

.c9.Mui-disabled {
  color: rgba(255,255,255,0.3);
}

.c9:hover {
  outline: none;
  border: none;
  background-color: #3c3f43;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 {
  gap: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  gap: 16px;
}

.c10 {
  width: 100%;
  text-align: left;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 * {
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 16px;
}

@media print {
  .c5 {
    color-adjust: exact;
  }
}

@media (hover:none) {
  .c9:hover {
    background-color: transparent;
  }
}

<div
    class="c0 c1"
  >
    <div
      class="c2"
      style="width: 100%; justify-content: flex-end; align-items: center;"
    >
      <hr
        class="c3 MuiDivider-root MuiDivider-fullWidth c4"
      />
      <div
        aria-label="Ordenar ascendentemente"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="c5 makeStyles-wrapper-16 MuiButtonBase-root"
          data-testid="episodes-sort-button"
          tabindex="0"
          type="button"
        >
          <div
            class="makeStyles-common-13 makeStyles-secondary-15"
          >
            <svg
              aria-hidden="true"
              class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c7"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(1);"
                x1="0"
                x2="24"
                y1="4"
                y2="4"
              />
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(0.5);"
                x1="0"
                x2="24"
                y1="12"
                y2="12"
              />
              <line
                stroke="currentColor"
                stroke-width="3"
                style="transform: scaleX(0.25);"
                x1="0"
                x2="24"
                y1="20"
                y2="20"
              />
            </svg>
          </div>
          <div
            class="makeStyles-common-13 makeStyles-root-14"
          >
            Ordenar
          </div>
          <span
            class="c8 MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 10
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 9
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 8
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 7
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 6
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 5
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 4
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 3
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 2
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
      <button
        aria-label="Ver episodio"
        class="c5 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root c9 c10"
        data-mui-internal-clone-element="true"
        data-testid="episode-button-watch-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c2 c11 c12"
        >
          <div>
            Episodio 1
          </div>
          <div
            class="c2 c11 c13"
          />
          <svg
            aria-hidden="true"
            class="c6 MuiSvgIcon-root MuiSvgIcon-fontSizeMedium"
            data-testid="PlayArrowRoundedIcon"
            focusable="false"
            style="font-size: 1.4rem; overflow: hidden;"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 6.82v10.36c0 .79.87 1.27 1.54.84l8.14-5.18c.62-.39.62-1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z"
            />
          </svg>
        </div>
        <span
          class="c8 MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
